--- a/files/ueventd.gt-i5500.rc
+++ b/files/ueventd.gt-i5500.rc
@@ -1,70 +1,71 @@
-## BEGIN Extracted from Samsung init - needs checking
-/dev/block/bml9             0770   root        root
-/dev/block/bml10            0770   root        root
-/dev/block/bml11            0770   root        root
-/dev/block/bml12            0770   root        root
-/dev/block/bml13            0770   root        root
-/dev/block/bml14            0770   root        root
-/dev/block/bml14            0770   root        root
-/dev/block/stl9             0770   root        root
-/dev/block/stl10            0770   root        root
-/dev/block/stl11            0770   root        root
-/dev/block/stl12            0770   root        root
-/dev/block/stl13            0770   root        root
-/dev/block/stl14            0770   root        root
-/dev/block/stl15            0770   root        root
+/dev/block/bml7			0770	system		radio
+/dev/block/bml9			0770	root		root
+/dev/block/bml10		0770	root		root
+/dev/block/bml11		0770	root		root
+/dev/block/bml12		0770	root		root
+/dev/block/bml13		0770	root		root
+/dev/block/bml14		0770	root		root
+/dev/block/bml15		0770	root		root
+/dev/block/stl9			0770	root		root
+/dev/block/stl10		0770	root		root
+/dev/block/stl11		0770	root		root
+/dev/block/stl12		0770	root		root
+/dev/block/stl13		0770	root		root
+/dev/block/stl14		0770	root		root
+/dev/block/stl15		0770	root		root
 
-/dev/rtc1                   0660   system      radio
+/dev/rtc1			0660	system		radio
 
-/dev/msm_voicememo          0660   system      audio
-/dev/msm_amrnb              0660   system      audio
-/dev/msm_amr_in             0660   system      audio
-/dev/msm_amrwb              0660   system      audio
-/dev/msm_qcelp              0660   system      audio
-/dev/msm_dec                0660   system      audio
-/dev/msm_evrc               0660   system      audio
-/dev/msm_pcm_dec            0660   system      audio
-/dev/msm_wma                0660   system      audio
-/dev/msm_wmapro             0660   system      audio
-/dev/msm_vidc_reg           0660   system      graphics
-/dev/msm_vidc_dec           0660   system      graphics
-/dev/msm_vidc_enc           0660   system      graphics
+/dev/msm_amrnb			0660	system		audio
+/dev/msm_amrnb_in		0660	system		audio
+/dev/msm_amrwb			0660	system		audio
+/dev/msm_dec			0660	system		audio
+/dev/msm_evrc			0660	system		audio
+/dev/msm_pcm_dec		0660	system		audio
+/dev/msm_preproc_ctl		0660	system		audio
+/dev/msm_qcelp			0660	system		audio
+/dev/msm_wma			0660	system		audio
+/dev/msm_wmapro			0660	system		audio
+/dev/msm_vidc_reg		0660	system		graphics
+/dev/msm_voicememo		0660	system		audio
 
-/dev/system_bus_freq        0666   root        root
-/dev/cpu_dma_latency        0666   root        root
+/dev/system_bus_freq		0666	root		root
+/dev/cpu_dma_latency		0666	root		root
 
 # CDMA radio interface MUX
-/dev/ppp                    0660   radio       vpn
-/dev/tun                    0640   vpn         vpn
+/dev/ppp			0660	radio		vpn
+/dev/tun			0640	vpn		vpn
 
-## END Extracted from Samsung init - needs checking
-
-/dev/oncrpc/                0660   radio       system
-/dev/msm_camera             0660   system      system
-/dev/smdcntl0               0640   radio       radio
-/dev/smdcntl1               0640   radio       radio
-/dev/smdcntl2               0640   radio       radio
-/dev/kgsl-3d0               0666   root        root
-/dev/hw3d                   0666   root        root
-/dev/msm_preproc_ctl        0660   system      audio
+/dev/log/system			0662	radio		radio
+/dev/log/radio			0662	radio		radio
+/dev/log/events			0662	radio		radio
+/dev/log/main			0662	radio		radio
+/dev/msm_camera			0660	system		system
+/dev/smdcntl0			0640	radio		radio
+/dev/smdcntl1			0640	radio		radio
+/dev/smdcntl2			0640	radio		radio
+/dev/kgsl-3d0			0666	root		root
 
 # CSC
-/proc/LinuStoreIII/efs_info 0664   radio       radio
-/proc/LinuStoreIII/keystr   0664   radio       radio
+/proc/LinuStoreIII/efs_info	0664	radio		radio
+/proc/LinuStoreIII/keystr	0664	radio		radio
 
 # Networking / RIL
-/dev/dpram0		    0660   radio       radio
-/dev/dpram1		    0660   radio       radio
-/dev/dpramerr		    0660   radio       radio
-/dev/multipdp		    0660   radio       radio
-/dev/ttySMD0		    0660   radio       radio
-/dev/ttyCSD0                0660   radio       radio
-/dev/ttyGPS0                0660   radio       radio
-/dev/ttyXTRA0               0660   radio       radio
+/dev/dun			0660	radio		radio
+/dev/dpram0			0660	radio		radio
+/dev/dpram1			0660	radio		radio
+/dev/dpramerr			0660	radio		radio
+/dev/multipdp			0660	radio		radio
+/dev/pm_monitor			0660	radio		system
+/dev/ttygs0			0660	radio		radio
+/dev/ttySMD0			0660	radio		radio
+/dev/ttyCSD0			0660	radio		radio
+/dev/ttyGPS0			0660	system		system
+/dev/ttyXTRA0			0660	system		system
 
 # Sensors
-/dev/mmc31xx		    0666   root        system
-/dev/bma_accel		    0666   root        system	    
-/dev/ecompass_ctrl	    0666   root        system
-/dev/proximity		    0666   root        system
-/dev/accelerometer          0666   root        system
+/dev/mmc31xx			0666	compass		system
+/dev/bma_accel			0666	compass		system	    
+/dev/ecompass_ctrl		0666	compass		system
+/dev/proximity			0666	compass		system
+/dev/accelerometer		0666	compass		system
