--- a/files/init.gt-i5500.rc
+++ b/files/init.gt-i5500.rc
@@ -159,6 +159,10 @@ service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm --bau
 	disabled
 	oneshot
 
+service abtfilt /system/bin/abtfilt -c -d -z -n
+    disabled
+    oneshot
+
 service wpa_supplicant /system/bin/wpa_supplicant -Dawext -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
 	group wifi inet
 	socket wpa_wlan0 dgram 660 wifi wifi
@@ -200,3 +204,10 @@ on property:init.svc.ril-daemon=running
 
 on property:dev.bootcomplete=1
 	start memsicd
+
+on property:init.svc.bluetoothd=running
+    write /sys/devices/virtual/bluetooth/hci0/idle_timeout 7000
+    start abtfilt
+
+on property:init.svc.bluetoothd=stopped
+    stop abtfilt
