--- a/files/ueventd.gt-i5500.rc
+++ b/files/ueventd.gt-i5500.rc
@@ -57,7 +57,7 @@
 /dev/dpramerr			0660	radio		radio
 /dev/multipdp			0660	radio		radio
 /dev/pm_monitor			0660	radio		system
-/dev/ttygs0			0660	radio		radio
+/dev/ttyGS0			0660	radio		radio
 /dev/ttySMD0			0660	radio		radio
 /dev/ttyCSD0			0660	radio		radio
 /dev/ttyGPS0			0660	system		system
