--- a/files/init.gt-i5500.rc
+++ b/files/init.gt-i5500.rc
@@ -134,7 +134,7 @@ service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm --bau
 	disabled
 	oneshot
 
-service wpa_supplicant /system/bin/wpa_supplicant -Dawext -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
+service wpa_supplicant /system/bin/wpa_supplicant -Dwext -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
 	group wifi inet
 	socket wpa_wlan0 dgram 660 wifi wifi
 	disabled
