Revert brcm_patachram_plus service options to CM7 stock

--- a/files/init.gt-i5500.rc
+++ b/files/init.gt-i5500.rc
@@ -128,7 +128,7 @@ service qmuxd /system/bin/qmuxd
 
 service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm --baudrate 3000000 \
 	--patchram /system/bin/BCM2049B0_BCM20780B0_002.001.022.0170.0174.hcd \
-	--pcm_role slave -d /dev/ttyHS0 
+	-d /dev/ttyHS0 
 	user bluetooth
 	group bluetooth net_bt_admin
 	disabled
