--- a/files/init.gt-i5500.rc
+++ b/files/init.gt-i5500.rc
@@ -148,6 +148,10 @@ service iprenew_wlan0 /system/bin/dhcpcd -n
 	disabled
 	oneshot
 
+service netd /system/bin/netd
+	socket netd stream 0660 root system
+	socket dnsproxyd stream 0660 root inet
+
 service hostapd /system/bin/hostapd /data/misc/wifi/hostapd.conf
 	socket hostapd_athap0 dgram 660 wifi wifi
 	group wifi inet
