disable setup_fs service in lieu of possible /cache corruption issues

--- a/prebuilt/init.gt-i5500.rc
+++ b/prebuilt/init.gt-i5500.rc
@@ -165,6 +165,7 @@ service setup_fs /system/bin/setup_fs /dev/block/stl13 /dev/block/stl14
 	user root
 	group root
 	oneshot
+	disabled
 
 on property:init.svc.ril-daemon=running
 	start get_macaddrs
