do we even need qmuxd?

--- a/prebuilt/init.gt-i5500.rc
+++ b/prebuilt/init.gt-i5500.rc
@@ -131,6 +131,7 @@ on boot
 service qmuxd /system/bin/qmuxd
 	user radio
 	group system radio inet
+	disabled
 
 service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm --baudrate 3000000 \
 	--patchram /system/bin/BCM2049B0_BCM20780B0_002.001.022.0170.0174.hcd \
