--- a/prebuilt/init.gt-i5500.rc
+++ b/prebuilt/init.gt-i5500.rc
@@ -169,6 +169,7 @@ service memsicd /system/bin/memsicd
 	user system
 	group system
 	oneshot
+	disabled
 
 service setup_fs /system/bin/setup_fs /dev/block/stl13 /dev/block/stl14
 	user root
