Kernel & wifi module updates
Kernel: enable CGROUPS, smartassV2 changes, updated Android staging drivers & misc fixes
Wifi: updated to new ar6000 source from: https://github.com/psyke83/AR6kSDK.3.1
synaptics_i2c_rmi4: updated fake dual-touch module to v9.1(fixed)
init: permissions change for ar6000 sdcc detection

--- a/prebuilt/init.gt-i5500.rc
+++ b/prebuilt/init.gt-i5500.rc
@@ -85,7 +85,9 @@ on boot
 # SD card polling
 	chown system system /sys/module/g_android/parameters/product_id
 	chown system system /sys/devices/platform/msm_sdcc.1/polling
+	chown system system /sys/devices/platform/msm_sdcc.1/detect_change
 	chown system system /sys/devices/platform/msm_sdcc.2/polling
+	chown system system /sys/devices/platform/msm_sdcc.2/detect_change
 	chown system system /sys/devices/platform/android_usb/composition
 
 # anr mode chage
