--- a/prebuilt/etc/wifi/hostapd.conf
+++ b/prebuilt/etc/wifi/hostapd.conf
@@ -1,8 +1,6 @@
-auth_algs=1
-channel_num=1
-dtim_period=1
-preamble=0
+interface=athap0
+ssid=Galaxy5
+channel=1
 max_num_sta=8
 beacon_int=100
-ssid=Galaxy5
-interface=wlan0
+dtim_period=1
