rename memsicd -> g5sensord

--- a/prebuilt/init.gt-i5500.rc
+++ b/prebuilt/init.gt-i5500.rc
@@ -167,7 +167,7 @@ service get_macaddrs /system/bin/get_macaddrs
 	oneshot
 	disabled
 
-service memsicd /system/bin/memsicd
+service g5sensord /system/bin/g5sensord
 	user system
 	group system
 	oneshot
