--- a/prebuilt/init.gt-i5500.rc
+++ b/prebuilt/init.gt-i5500.rc
@@ -28,26 +28,12 @@ on boot
 # Set up WiFi and Bluetooth as soon as possible
 	setprop ro.bt.bdaddr_path "/data/.nvmac_bt.info"
 
-# Set CPU frequency preferences
-	#write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
-	write /sys/devices/system/cpu/cpu0/cpufreq/ondemand/up_threshold 95
-	write /sys/devices/system/cpu/cpu0/cpufreq/ondemand/down_differential 3
-	write /sys/devices/system/cpu/cpu0/cpufreq/ondemand/sampling_rate 50000
-	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 245760
-	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 604800
-
-# For VPN (workaround)
-	mkdir /data/data/misc 0777 system system
-	mkdir /data/data/misc/vpn 0777 system system
-	mkdir /data/data/misc/vpn/profiles 0777 system system
-
 # For sensors
 	mkdir /data/misc/sensors 0777 system misc
 	chmod 0666 /data/misc/sensors/ecs_nvm
 	chmod 0666 /data/misc/sensors/accel_offset
 
 # Setup bluetooth
-	mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
 	chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
 	chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
 	chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
@@ -59,26 +45,10 @@ on boot
 	chown bluetooth bluetooth /sys/devices/platform/msm_serial_hs.0/clock
 	chmod 0666 /sys/devices/platform/msm_serial_hs.0/clock
 
-# Create WIFI filesystem structure
-	mkdir /data/misc 01771 system misc
-	mkdir /data/misc/wifi 0770 system wifi
-	mkdir /data/misc/wifi/sockets
-	chown system wifi /data/misc/wifi/sockets
-	chmod 770 /data/misc/wifi/sockets
-	mkdir /data/misc/dhcp 0770 dhcp dhcp
-	chown dhcp dhcp /data/misc/dhcp
-	mkdir /data/system 0775 system system
-
 # Permission for ril
 	mkdir /data/misc/radio 0774 radio radio
-	mkdir /data/local
-	chmod 0777 /data/local
-	chown radio shell /data/local
-	mkdir /data/local/tmp
-	chmod 0777 /data/local/tmp
-	chown radio shell /data/local/tmp
 
-# For qmuxd socket
+# Permissions for qmuxd socket
 	mkdir /data/radio 0770 radio radio
 	chown radio radio 0770 /data/radio
 
@@ -90,19 +60,12 @@ on boot
 	chown system system /sys/devices/platform/msm_sdcc.2/detect_change
 	chown system system /sys/devices/platform/android_usb/composition
 
-# anr mode chage
-	mkdir /data/anr 0777 system system 
-	chmod 0777 /data/anr
-
 # MAX8899 headset detect 
 	chown radio system /sys/class/switch/h2w/state
 
 # for silent reset
 	chown system system /proc/dump_enable
 	chown system system /proc/silent
-
-# for Dump On/Off
-	chmod 0777 /data/dump_enable
 
 # for multi csc
 	chown radio radio /proc/LinuStoreIII/efs_info 
@@ -112,23 +75,12 @@ on boot
 	chown radio radio /proc/LinuStoreIII/keystr 
 	chmod 0664 /proc/LinuStoreIII/keystr
 
-# sound text data file
-	chmod 0777 /data/soundbooster.txt
-	chmod 0777 /data/aeqcoe.txt
-	chmod 0777 /data/lmfilter.txt
-	chmod 0777 /data/eqfilter.txt
-	chmod 0777 /data/situation.txt
-	chmod 0777 /data/stream_headset.txt
-	chmod 0777 /data/stream_speaker.txt
-
 # WIFI
 	mkdir /data/misc/wifi/sockets 0770 wifi wifi
 	mkdir /data/misc/wifi/hostapd 0770 wifi wifi
 
 # DHCP
 	mkdir /data/misc/dhcp 0770 dhcp dhcp
-	mkdir /data/misc/dhcp 0777 system system
-	chmod 0666 /data/bdaddr
 
 service qmuxd /system/bin/qmuxd
 	user radio
