--- a/prebuilt/init.gt-i5500.rc
+++ b/prebuilt/init.gt-i5500.rc
@@ -21,6 +21,10 @@ on boot
 # Tweak SD card cache
 	write /sys/block/mmcblk0/bdi/read_ahead_kb 128
 
+# Scaling min/max freqencies
+	write write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 122880
+	write write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 604800
+
 # Tweak AR6003 TCP buffering
 	setprop net.tcp.buffersize.default 4096,87380,196608,4096,16384,110208
 	setprop net.tcp.buffersize.wifi    4095,87380,393216,4096,16384,110208
@@ -94,7 +98,7 @@ service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm --bau
 	group bluetooth net_bt_admin
 	disabled
 
-service wpa_supplicant /system/bin/wpa_supplicant -Dwext -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
+service wpa_supplicant /system/bin/wpa_supplicant -Dwext -W -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
 	group wifi inet
 	socket wpa_wlan0 dgram 660 wifi wifi
 	disabled
