--- a/prebuilt/init.gt-i5500.rc
+++ b/prebuilt/init.gt-i5500.rc
@@ -22,8 +22,8 @@ on boot
 	write /sys/block/mmcblk0/bdi/read_ahead_kb 128
 
 # Scaling min/max freqencies
-	write write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 122880
-	write write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 604800
+	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 122880
+	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 604800
 
 # Tweak AR6003 TCP buffering
 	setprop net.tcp.buffersize.default 4096,87380,196608,4096,16384,110208
