--- a/prebuilt/init.gt-i5500.rc
+++ b/prebuilt/init.gt-i5500.rc
@@ -104,7 +104,7 @@ service wpa_supplicant /system/bin/wpa_supplicant -Dwext -W -iwlan0 -c/data/misc
 	disabled
 	oneshot
 
-service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
+service dhcpcd_wlan0 /system/bin/dhcpcd -ABK
 	disabled
 	oneshot
 
