keep memsicd around in case we want to switch back to it later

--- a/prebuilt/init.gt-i5500.rc
+++ b/prebuilt/init.gt-i5500.rc
@@ -123,6 +123,12 @@ service get_macaddrs /system/bin/get_macaddrs
 	oneshot
 	disabled
 
+service memsicd /system/bin/memsicd
+	user system
+	group system
+	oneshot
+	disabled
+
 service g5sensord /system/bin/g5sensord
 	user system
 	group system
