--- a/prebuilt/init.gt-i5500.rc
+++ b/prebuilt/init.gt-i5500.rc
@@ -145,6 +145,11 @@ service setup_fs /system/bin/setup_fs stl13 stl14
 	group root
 	oneshot
 
+service autoreodexer /system/bin/reodexer auto
+    user root
+    group root
+    oneshot
+
 on property:init.svc.ril-daemon=running
 	start get_macaddrs
 
@@ -152,3 +157,6 @@ on property:init.svc.ril-daemon=running
 # brcm_patchram_plus from hanging, or Bluetooth initialization fails.
 on property:dev.bootcomplete=1
 	stop hciattach
+
+on property:sys.boot_completed=1
+    start autoreodexer
