--- a/prebuilt/init.gt-i5500.rc
+++ b/prebuilt/init.gt-i5500.rc
@@ -103,7 +103,7 @@ service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm --bau
     group bluetooth net_bt_admin
     disabled
 
-service wpa_supplicant /system/bin/wpa_supplicant -Dwext -W -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
+service wpa_supplicant /system/bin/wpa_supplicant -Dawext -W -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
     group wifi inet
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
