Update ueventd permissions, small wpa_supplicant service change

--- a/prebuilt/ueventd.gt-i5500board.rc
+++ b/prebuilt/ueventd.gt-i5500board.rc
@@ -21,6 +21,8 @@
 /dev/dpramerr                   0660    radio      radio
 /dev/dun                        0660    radio      radio
 /dev/ecompass_ctrl              0666    compass    system
+/dev/genlock                    0666    root       root
+/dev/graphics/fb0               0666    system     graphics
 /dev/kgsl-3d0                   0666    root       root
 /dev/mmc31xx                    0666    compass    system
 /dev/msm_amrnb                  0660    system     audio
