--- a/prebuilt/etc/init.europaparts.rc
+++ b/prebuilt/etc/init.europaparts.rc
@@ -14,11 +14,19 @@ on property:persist.sys.fakedt=0
     write /sys/devices/virtual/touch/synaptics/fakedt 0
     start europaparts
 
+on property:persist.sys.ksm=1
+    write /sys/kernel/mm/ksm/run 1
+
+on property:persist.sys.ksm=0
+    write /sys/kernel/mm/ksm/run 0
+
 on property:persist.sys.reodex=0
     write /data/local/.odexnow 0
+    start europaparts
 
 on property:persist.sys.reodex=1
     write /data/local/.odexnow 1
+    start europaparts
 
 on property:persist.sys.swap=0
     exec /system/xbin/swapoff /dev/block/mmcblk0p3
