--- a/prebuilt/init.gt-i5500.rc
+++ b/prebuilt/init.gt-i5500.rc
@@ -109,13 +109,13 @@ service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm --bau
 	group bluetooth net_bt_admin
 	disabled
 
-service wpa_supplicant /system/bin/wpa_supplicant -Dwext -W -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
+service wpa_supplicant /system/bin/wpa_supplicant -Dawext -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
 	group wifi inet
 	socket wpa_wlan0 dgram 660 wifi wifi
 	disabled
 	oneshot
 
-service dhcpcd_wlan0 /system/bin/dhcpcd -ABK
+service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
 	disabled
 	oneshot
 
@@ -154,6 +154,9 @@ service setup_fs /system/bin/setup_fs stl13 stl14
 
 on property:init.svc.ril-daemon=running
 	start get_macaddrs
+
+on property:init.svc.wpa_supplicant=stopped
+	stop dhcpcd_wlan0
 
 # HACK: we need to disable the hciattach service on boot to prevent
 # brcm_patchram_plus from hanging, or Bluetooth initialization fails.
