--- a/prebuilt/init.gt-i5500.rc
+++ b/prebuilt/init.gt-i5500.rc
@@ -19,8 +19,9 @@ on boot
 
 	import /system/etc/init.europaparts.rc
 
-# Tweak SD card cache
-	write /sys/block/mmcblk0/bdi/read_ahead_kb 128
+# SD card cache permissions
+	chown system system /sys/devices/virtual/bdi/179:0/read_ahead_kb
+	chmod 0666 /sys/devices/virtual/bdi/179:0/read_ahead_kb
 
 # Scaling min/max freqencies
 	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 122880
